# Operating-Systems-Course-Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  WINDOWS.md
.github/: RELEASE-GUIDE.md
.github/workflows/: release.yml.example
CPUSCHED/: CALCULATIONS.md
CPUSCHED/src/executable/: CMakeLists.txt  main.cpp
CS471PROJECT/: CMakeLists.txt
CS471PROJECT/CPUSCHED/: CMakeLists.txt
CS471PROJECT/CPUSCHED/src/executable/: CMakeLists.txt  main.cpp
CS471PROJECT/CPUSCHED/tests/: CMakeLists.txt  README.md  file_reader_test.cpp  sanity_check.cpp
CS471PROJECT/PRODUCER-CONSUMER/: CMakeLists.txt
CS471PROJECT/PRODUCER-CONSUMER/src/executable/: CMakeLists.txt
CS471PROJECT/PRODUCER-CONSUMER/tests/: README.md  sanity_check.cpp
PRODUCER-CONSUMER/: CMakeLists.txt
PRODUCER-CONSUMER/src/executable/: main.cpp
PRODUCER-CONSUMER/tests/: CMakeLists.txt
